scalalib/src/test/resource/acyclic/src/test/resources/success/pkg/innercycle/a/A1.scala
package success.pkg.innercycle.a

class A1 {
  val x: A2 = null
  def y = p
}
