scalalib/src/test/resource/acyclic/src/test/resources/fail/indirect/A.scala
package fail.indirect
import acyclic.file

object A
class A {
  val b: B = null
}
